Toevoeging betaalpagina met afbeelding van iDeal, uitbreiding ticketpagina met form en knop met link naar de betaalpagina, kleine aanpassingen

--- a/Website_Movie Castle/Views/Home/Films.cshtml
+++ b/Website_Movie Castle/Views/Home/Films.cshtml
@@ -26,33 +26,33 @@
       <td><img src="https://th.bing.com/th/id/OIP.KNfIqaD92jvecpbxNWWQ4wAAAA?pid=ImgDet&rs=1" alt="Image 1" width="100" height="150"></td>
       <td>Avengers: Endgame</td>
       <td>24/06/2023 - 15:00<br />24/06/2023 - 18:00</td>
-      <td><a asp-area="" asp-controller="Home" asp-action="Avengers_endgame">Koop Tickets!</a></td>
+      <td><a asp-area="" asp-controller="Home" asp-action="Avengers_endgame">Meer Informatie</a></td>
     </tr>
     <tr>
       <td><img src="https://www.themoviedb.org/t/p/w500/1NqwE6LP9IEdOZ57NCT51ftHtWT.jpg" alt="Image 2" width="100" height="150"></td>
       <td>Puss in Boots</td>
       <td>25/06/2023 - 16:00<br />24/06/2023 - 20:00</td>
-      <td><a asp-area="" asp-controller="Home" asp-action="Puss_In_Boots">Koop Tickets!</a></td>
+            <td><a asp-area="" asp-controller="Home" asp-action="Puss_In_Boots">Meer Informatie</a></td>
 
     </tr>
     <tr>
       <td><img src="https://images.pathe-thuis.nl/32418_450x640.jpg" alt="Image 3" width="100" height="150"></td>
       <td>Avatar</td>
       <td>28/06/2023 - 12:00<br />27/06/2023 - 22:00</td>
-      <td><a asp-area="" asp-controller="Home" asp-action="Avatar_Way_of_Water">Koop Tickets!</a></td>
+            <td><a asp-area="" asp-controller="Home" asp-action="Avatar_Way_of_Water">Meer Informatie</a></td>
 
     </tr>
     <tr>
       <td><img src="https://amc-theatres-res.cloudinary.com/image/upload/f_auto,fl_lossy,h_465,q_auto,w_310/v1676302257/amc-cdn/production/2/movies/62400/62358/PosterDynamic/149048.jpg" alt="Image 4"  width="100" height="150"></td>
       <td>Guardians of the Galaxy</td>
       <td>23/06/2023 - 18:00<br />26/06/2023 - 23:00</td>
-      <td><a asp-area="" asp-controller="Home" asp-action="Guardians_of_The_Galaxy">Koop Tickets!</a></td>
+            <td><a asp-area="" asp-controller="Home" asp-action="Guardians_of_The_Galaxy">Meer Informatie</a></td>
     </tr>
     <tr>
       <td><img src="https://assets.voxcinemas.com/posters/P_HO00009455.jpg" alt="Image 5"  width="100" height="150"></td>
       <td>Little Mermaid</td>
       <td>26/06/2023 - 20:00<br />28/06/2023 - 15:00</td>
-            <td><a asp-area="" asp-controller="Home" asp-action="Little_Mermaid">Koop Tickets!</a></td>
+            <td><a asp-area="" asp-controller="Home" asp-action="Little_Mermaid">Meer Informatie</a></td>
 
     </tr>
   </table>
