--- a/Website_Movie Castle/Views/Home/Index.cshtml
+++ b/Website_Movie Castle/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<text1>Welkom bij de website van Movie Castle - dé bioscoop van Vlissingen!</text1>
-
+<div class="titel">Welkom bij de website van Movie Castle - dé bioscoop van Vlissingen!
+</div>
 <style>
 
 button {
@@ -50,7 +50,7 @@ button {
 
 .move-left {
     position: absolute;
-    top: 220px;
+    top: 260px;
     left: 900px;
     vertical-align:central;
 }
@@ -64,7 +64,7 @@ body {
 
 .move-aside {
     position: absolute;
-    top: 220px;
+    top: 260px;
     left: 50px;
     vertical-align:middle;
 }
