--- a/Website_Movie Castle/Views/Home/Guardians_of_The_Galaxy.cshtml
+++ b/Website_Movie Castle/Views/Home/Guardians_of_The_Galaxy.cshtml
@@ -54,7 +54,7 @@
     </div>
     <button class="buttonticket"> <a class="text-light" asp-area="" asp-controller="Home" asp-action="Tickets">Koop Tickets!</a> </button>
 
-<iframe width="1120" height="630" src="https://www.youtube.com/embed/u3V5KDHRQvk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="1120" height="630" src="https://www.youtube.com/embed/u3V5KDHRQvk?autoplay=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
 
