--- a/Website_Movie Castle/Views/Shared/_Layout.cshtml
+++ b/Website_Movie Castle/Views/Shared/_Layout.cshtml
@@ -31,6 +31,11 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Aboutus">About us</a>
                     </ul>
                 </div>
+                <ul class="navbar-loose">
+                    <li1 class="searchbar1">
+                        <input type="text" placeholder="Zoek...">
+                    </li1>
+                </ul>
             </div>
         </nav>
             <div id="cookies">
