--- a/Website_Movie Castle/wwwroot/css/site.css
+++ b/Website_Movie Castle/wwwroot/css/site.css
@@ -1,4 +1,3 @@
-
 a {
     color:#E0B114;
 }
@@ -85,6 +84,13 @@ a {
     outline: none;
 }
 
+.titel {
+    margin-bottom:35px;
+    font-size:32px;
+    text-align:center;
+    width:100%;
+}
+
 text1 {
     text-align: center;
     font-size: 30px;
@@ -111,6 +117,7 @@ body {
     background-color: #B30E2A;
     padding: 20px;
     color: white;
+    font-size:30px;
 }
 
 /* De CSS code voor de input van de gebruiker (witte vlakken) */
@@ -179,6 +186,18 @@ input[type=submit] {
 
 .buttonticket:hover {
     background-color: #C75910;
+}
+
+.navbar-loose {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+    list-style-type: none;
+    font-family: "payrus", fantasy;
+    color: black;
 }
 
 
