404 pagina en systeem toegevoegd zodat de gebruiker een error krijgt bij het navigeren naar een onbestaande pagina, notfound (404) pagina css en tekst toegevoegd.

--- a/Website_Movie Castle/Views/Shared/_Layout.cshtml
+++ b/Website_Movie Castle/Views/Shared/_Layout.cshtml
@@ -32,9 +32,9 @@
                     </ul>
                 </div>
                 <ul class="navbar-loose">
-                    <li1 class="searchbar1">
-                        <input type="text" placeholder="Zoek...">
-                    </li1>
+                    <li class="searchbar1">
+                        <input type="text" placeholder="Zoeken...">
+                    </li>
                 </ul>
             </div>
         </nav>
