Kleine aanpassing form op ticketpagina

--- a/Website_Movie Castle/Views/Home/NotFound.cshtml
+++ b/Website_Movie Castle/Views/Home/NotFound.cshtml
@@ -2,6 +2,11 @@
 
 <h4>De opgevraagde pagina kon niet gevonden worden.</h4>
 
+<div class="vierplaatje">
+<img src="https://blog.fluidui.com/assets/images/posts/imageedit_1_9273372713.png" width="650" height="350">
+</div>
+
+
 
 <style>
 h3 {
@@ -12,5 +17,13 @@ h3 {
 h4 {
     text-align: center;
     font-size: 30px;
+}
+
+.vierplaatje {
+    margin-top:50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 </style>
